<resources>
    <string name="app_name">Pandemian</string>
    <string name="title_activity_maps">Map</string>
    <string name="btn_locations">Ubicaciones</string>
    <string name="btn_add">Agregar Paciente</string>
    <string name="datos_personales">Datos Personales</string>
    <string name="name">Nombre y Apellido</string>
    <string name="ingresa_tu_nombre">Ingresa tu nombre</string>
    <string name="cedula">Cédula</string>
    <string name="ingresa_tu_cedula">Ingresa tu cédula</string>
    <string name="sex">Selecciona tu sexo</string>
    <string name="rb_masculino">Masculino</string>
    <string name="rb_femenino">Femenino</string>
    <string name="age">Edad</string>
    <string name="symptoms">Síntomas</string>
    <string name="data_required_error">Este campo es requerido.</string>
    <string name="Centers">Lugares de Atención</string>
    <string name="menu_report">Reporte</string>
    <string name="menu_location">Hospitales</string>
    <string name="menu_vaccine">Vacunas</string>
    <string name="btn_next">Siguiente</string>
    <string name="text_location_permission">Permiso de Ubicación</string>
    <string name="message_location_permission">Necesitamos permiso para saber su ubicación actual.</string>
    <string name="permission_denied_message">Permiso denegado.</string>
    <string name="location_success">Ubicación Obtenida.</string>
    <string name="location_error_get">Ubicación no obtenida.</string>
    <string name="address_location_service_title">GPS Desactivado.</string>
    <string name="address_location_service_message">El servicio de GPS no está activado.</string>
    <string name="common_ok">ok</string>
    <string name="common_cancel">cancel</string>
    <string name="location_service_disable">Por favor active el GPS</string>
    <string name="work">Status Actual</string>
    <string name="rb_lab">Laborando</string>
    <string name="rb_sus">Suspendido</string>
    <string name="rb_unemployed">Desempleado</string>
    <string name="workName">Lugar de Trabajo</string>
    <string name="rb_yes">Sí</string>
    <string name="rb_sometime">Aveces</string>
    <string name="rb_never">Nunca</string>
    <string name="typeHelp">Tipo de Ayuda</string>
    <string name="help">¿Ha recibido ayuda del Gobierno?</string>
    <string name="rb_vale">Vale Digital</string>
    <string name="rb_back">Bolsa de Comida</string>
    <string name="rb_card">Tarjetas</string>
    <string name="btn_astra">AstraZeneca</string>
    <string name="btn_pf">Pfitzer</string>
    <string name="btn_modern">Moderna</string>
    <string name="vaccine_link">¿Está interesado en Vacunarse? ¡Toca Aquí!</string>
    <string name="ask">¿Usted ha sido Vacunado?</string>
    <string name="rb_no">No</string>
    <string name="phone">Número de Teléfono/Celular</string>
    <string name="phone_hint">Ingresa tu número de Teléfono/Celular</string>
    <string name="hospital_phone">Teléfono: %s</string>
    <string name="Description">Estos efectos secundarios suelen aparecer al cabo de uno o dos días después de vacunarse. Los efectos secundarios podrían afectar su capacidad para completar sus actividades cotidianas, pero deberían desaparecer en pocos días.</string>
    <string name="vaccine_name">Nombre: %s</string>
    <string name="vaccine_brand">Fabricante: %s</string>
    <string name="vaccine_type">Tipo de vacuna: %s</string>
    <string name="vaccine_cant">Cantidad de dosis: %s</string>
    <string name="vaccine_supply">Modo de administración: \n%s</string>
    <string name="vaccine_notContent">NO contiene: \n%s</string>
    <string name="vaccine_suggest">¿Quienes deben vacunarse?\n%s</string>
    <string name="vaccine_notSuggest">¿Quién NO debería vacunarse con estas vacunas?\n%s</string>
    <string name="vaccine_effects">Posibles Efectos Secundarios:\n%s</string>
    <string name="vaccine_ref">Referencia: %s</string>
</resources>
