<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".report.HelpFragment">

    <ImageView
        android:id="@+id/img_title"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:src="@drawable/charity"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:text="@string/help"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_title" />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="@id/tvHelp"
        app:layout_constraintTop_toBottomOf="@id/tvHelp">

        <RadioButton
            android:id="@+id/rbYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rb_yes"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbSometime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/rb_sometime"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbNever"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/rb_never"
            android:textSize="18sp" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTypeHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:text="@string/typeHelp"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg" />

    <RadioGroup
        android:id="@+id/rgHelpType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="@id/tvTypeHelp"
        app:layout_constraintTop_toBottomOf="@id/tvTypeHelp">

        <RadioButton
            android:id="@+id/rbVale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rb_vale"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/rb_back"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/rb_card"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgHelpType"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:text="@string/btn_next"
        />


</androidx.constraintlayout.widget.ConstraintLayout>